--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
 title: Your Name
 description: Portfolio
 theme: minima
+
+collections:
+  projects:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: project
